chore: Update npm dependencies and add Prettier configuration

--- a/src/layouts/Docs.astro
+++ b/src/layouts/Docs.astro
@@ -1,32 +1,32 @@
 ---
-import Sidebar, { type SidebarItem } from "../components/Sidebar.astro"
-import Main from "../components/Main.astro"
-import Header from "../components/Header.astro"
+import Sidebar, { type SidebarItem } from "../components/Sidebar.astro";
+import Main from "../components/Main.astro";
+import Header from "../components/Header.astro";
 
 const sidebarItems: SidebarItem[] = [
-	{
-		label: "Introduction",
-		href: 'sasdas',
-		icon: 'Home'
-	}
-]
+  {
+    label: "Introduction",
+    href: "sasdas",
+    icon: "Home",
+  },
+];
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body class="flex flex-col">
-        <Header />
-		<div class="flex flex-col md:flex-row container mx-auto">
-			<Sidebar items={sidebarItems} />
-			<Main>
-				<slot />
-			</Main>
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body class="flex flex-col">
+    <Header />
+    <div class="flex flex-col md:flex-row container mx-auto">
+      <Sidebar items={sidebarItems} />
+      <Main>
+        <slot />
+      </Main>
+    </div>
+  </body>
 </html>
