--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,3 @@
 <header class="border-b border-b-slate-200">
-    <div class="container mx-auto p-4">
-        HolySheets
-    </div>
+  <div class="container mx-auto p-4">HolySheets</div>
 </header>
