--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,3 +1,3 @@
-<main class="w-full p-10 prose-sm prose-gray">
-    <slot/>
+<main class="w-full p-10 prose prose-sm prose-gray !max-w-full">
+  <slot />
 </main>
