--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -3,13 +3,15 @@ export interface SidebarItem {
   icon: string;
   label: string;
   href: string;
+  slug: string;
 }
 
 interface Props {
   items: SidebarItem[];
+  active: string;
 }
 
-const { items } = Astro.props;
+const { items, active } = Astro.props;
 ---
 
 <aside
@@ -18,13 +20,14 @@ const { items } = Astro.props;
     before:h-full before:w-screen before:right-[100%] before:top-0
     md:border-r-slate-200 md:border-r"
 >
-  <ul class="w-full">
+  <ul class="flex flex-col w-full gap-y-2">
     {
       items.map((item: SidebarItem) => {
         return (
           <li class="w-full">
             <a
-              class="hover:bg-slate-200 transition p-2 rounded-lg w-full block text-slate-800"
+              class={`hover:bg-slate-200 transition p-2 rounded-lg w-full block text-slate-800
+              ${active === item.slug ? "bg-slate-200" : ""}`}
               href={item.href}
             >
               {item.label}
