--- a/src/layouts/Docs.astro
+++ b/src/layouts/Docs.astro
@@ -1,4 +1,5 @@
 ---
+import type { MarkdownLayoutProps } from "astro";
 import Sidebar, { type SidebarItem } from "../components/Sidebar.astro";
 import Main from "../components/Main.astro";
 import Header from "../components/Header.astro";
@@ -6,10 +7,32 @@ import Header from "../components/Header.astro";
 const sidebarItems: SidebarItem[] = [
   {
     label: "Introduction",
-    href: "sasdas",
+    href: "/docs/introduction",
     icon: "Home",
+    slug: "introduction",
+  },
+  {
+    label: "Usage",
+    href: "/docs/usage",
+    icon: "Code",
+    slug: "usage",
+  },
+  {
+    label: "Getting Credentials",
+    href: "/docs/getting-credentials",
+    icon: "Key",
+    slug: "getting-credentials",
   },
 ];
+
+type Props = MarkdownLayoutProps<{
+  title: string;
+  previous?: string;
+  next?: string;
+  slug: string;
+}>;
+
+const { title, slug } = Astro.props.frontmatter;
 ---
 
 <html lang="en">
@@ -18,12 +41,12 @@ const sidebarItems: SidebarItem[] = [
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{title ? title + " - Holysheets!" : ""}</title>
   </head>
   <body class="flex flex-col">
     <Header />
     <div class="flex flex-col md:flex-row container mx-auto">
-      <Sidebar items={sidebarItems} />
+      <Sidebar items={sidebarItems} active={slug} />
       <Main>
         <slot />
       </Main>
