refactor: Update Footer, Header, and Sidebar components
This commit refactors the Footer, Header, and Sidebar components to improve the overall structure and functionality of the website.

- In the Footer component, the current year is dynamically calculated and displayed using JavaScript.
- In the Header component, a GitHub link is added to the site title, allowing users to easily access the project's GitHub repository.
- In the Sidebar component, the styling of the menu items is improved by wrapping the icon in a span element.

These changes enhance the user experience and make the website more user-friendly and visually appealing.

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -26,7 +26,7 @@ const { items, active } = Astro.props;
     md:border-r-slate-200 md:border-r relative min-h-screen"
 >
   <ul
-    class="flex flex-col w-full gap-y-2 md:sticky md:top-0 h-[0px] min-h-auto"
+    class="flex flex-col w-full gap-y-2 md:sticky md:top-0 md:h-[0px] min-h-auto"
   >
     {
       items.map((item: SidebarItem) => {
@@ -37,7 +37,9 @@ const { items, active } = Astro.props;
               ${active === item.slug ? "bg-slate-200" : ""}`}
               href={item.href}
             >
-              <Icons icon={item.icon} />
+              <span class="text-sm flex">
+                <Icons icon={item.icon} />
+              </span>
               {item.label}
             </a>
             {item.children && item.children.length > 0 && (
