--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,16 @@
+---
+import Icons from "./Icons.astro";
+---
+
 <header class="border-b border-b-slate-200">
-  <div class="container mx-auto p-4">HolySheets</div>
+  <div class="container mx-auto p-4 font-semibold flex justify-center">
+    <p class="font-semibold">HolySheets</p>
+    <a
+      href="https://github.com/holy-sheets/holysheets"
+      target="_blank"
+      class="ml-auto block text-xl"
+    >
+      <Icons icon="github" />
+    </a>
+  </div>
 </header>
