--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,44 @@
 ---
-
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 ---
 
-<div></div>
+<Header />
+<main class="px-4 min-h-screen">
+  <div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
+    <h1
+      class="text-slate-900 font-extrabold text-4xl sm:text-5xl lg:text-6xl tracking-tight text-center"
+    >
+      Easily manipulate your <span class="text-brand-google-sheets"
+        >Google Sheets</span
+      > data without confuse range codes.
+    </h1>
+    <p
+      class="mt-6 text-lg text-slate-600 text-center max-w-3xl mx-auto dark:text-slate-400"
+    >
+      A small JavaScript/TypeScript utility library packed with out of the box
+      methods like
+      <code class="font-mono font-medium text-sky-500 dark:text-sky-400"
+        >findFirst</code
+      >,
+      <code class="font-mono font-medium text-sky-500 dark:text-sky-400"
+        >updateMany</code
+      >,
+      <code class="font-mono font-medium text-sky-500 dark:text-sky-400"
+        >clearMany</code
+      >
+      and
+      <code class="font-mono font-medium text-sky-500 dark:text-sky-400"
+        >deleteFirst</code
+      >.
+    </p><div class="mt-6 sm:mt-10 flex justify-center space-x-6 text-sm">
+      <a
+        class="bg-slate-900 hover:bg-slate-700 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50 text-white font-semibold h-12 px-6 rounded-lg w-full
+        flex items-center justify-center sm:w-auto dark:bg-sky-500 dark:highlight-white/20
+        dark:hover:bg-sky-400"
+        href="/docs">Get started</a
+      >
+    </div>
+  </div>
+</main>
+<Footer />
