--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Icons from "./Icons.astro";
 
 <header class="border-b border-b-slate-200">
   <div class="container mx-auto p-4 font-semibold flex justify-center">
-    <p class="font-semibold">HolySheets</p>
+    <a class="font-semibold block" href="/">HolySheets</a>
     <a
       href="https://github.com/holy-sheets/holysheets"
       target="_blank"
