feat: #1 Add classes for dark mode

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,14 @@
 ---
 import Icons from "./Icons.astro";
+import ThemeToggler from "./ThemeToggler.astro";
 ---
 
-<header class="border-b border-b-slate-200">
-  <div class="container mx-auto p-4 font-semibold flex justify-center">
+<header
+  class="border-b border-b-slate-200 dark:border-b-slate-700 bg-white dark:bg-slate-900"
+>
+  <div
+    class="container mx-auto p-4 font-semibold flex justify-center dark:text-white text-slate-900"
+  >
     <a class="font-semibold block" href="/">HolySheets</a>
     <a
       href="https://github.com/holy-sheets/holysheets"
@@ -12,5 +17,6 @@ import Icons from "./Icons.astro";
     >
       <Icons icon="github" />
     </a>
+    <ThemeToggler />
   </div>
 </header>
