--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,9 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="bg-slate-200 py-8 border-t border-t-slate-300">
+<footer
+  class="bg-slate-200 dark:bg-slate-800 dark:text-white py-8 border-t border-t-slate-300 dark:border-t-slate-700"
+>
   <div class="container mx-auto text-slate-400 flex px-6">
     <p class="ml-auto">&copy; {currentYear} HolySheets</p>
   </div>
