--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,3 +1,7 @@
-<main class="w-full p-10 prose prose-sm prose-gray !max-w-full">
+<main
+  class="w-full p-10 prose prose-sm dark:prose-invert
+  not:dark:prose-gray !max-w-full bg-white dark:bg-slate-900
+  dark:text-white"
+>
   <slot />
 </main>
