--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,14 +9,14 @@ import ThemeToggler from "./ThemeToggler.astro";
   <div
     class="container mx-auto p-4 font-semibold flex justify-center dark:text-white text-slate-900"
   >
-    <a class="font-semibold block" href="/">HolySheets</a>
+    <a class="font-semibold block mr-auto" href="/">HolySheets</a>
+    <ThemeToggler />
     <a
       href="https://github.com/holy-sheets/holysheets"
       target="_blank"
-      class="ml-auto block text-xl"
+      class="block text-xl"
     >
       <Icons icon="github" />
     </a>
-    <ThemeToggler />
   </div>
 </header>
