--- a/src/components/Icons.astro
+++ b/src/components/Icons.astro
@@ -1,9 +1,11 @@
 ---
 type Props = {
   icon: string;
+  className?: string;
 };
 
-const { icon } = Astro.props;
+const { icon, className = "" } = Astro.props;
+const completeClassName = `text-[inherit] w-[1em] mx-2 fill-slate-600 ${className}`;
 ---
 
 {
@@ -12,7 +14,7 @@ const { icon } = Astro.props;
       case "arrow-left":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"
           >
@@ -22,7 +24,7 @@ const { icon } = Astro.props;
       case "arrow-right":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"
           >
@@ -32,7 +34,7 @@ const { icon } = Astro.props;
       case "book":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 576 512"
           >
@@ -42,7 +44,7 @@ const { icon } = Astro.props;
       case "play":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 384 512"
           >
@@ -52,7 +54,7 @@ const { icon } = Astro.props;
       case "code":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 640 512"
           >
@@ -62,7 +64,7 @@ const { icon } = Astro.props;
       case "github":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 496 512"
           >
@@ -72,17 +74,37 @@ const { icon } = Astro.props;
       case "filter":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"
           >
             <path d="M3.9 54.9C10.5 40.9 24.5 32 40 32H472c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9V448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6V320.9L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z" />
           </svg>
         );
+      case "moon":
+        return (
+          <svg
+            class={completeClassName}
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512"
+          >
+            <path d="M144.7 98.7c-21 34.1-33.1 74.3-33.1 117.3c0 98 62.8 181.4 150.4 211.7c-12.4 2.8-25.3 4.3-38.6 4.3C126.6 432 48 353.3 48 256c0-68.9 39.4-128.4 96.8-157.3zm62.1-66C91.1 41.2 0 137.9 0 256C0 379.7 100 480 223.5 480c47.8 0 92-15 128.4-40.6c1.9-1.3 3.7-2.7 5.5-4c4.8-3.6 9.4-7.4 13.9-11.4c2.7-2.4 5.3-4.8 7.9-7.3c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-3.7 .6-7.4 1.2-11.1 1.6c-5 .5-10.1 .9-15.3 1c-1.2 0-2.5 0-3.7 0c-.1 0-.2 0-.3 0c-96.8-.2-175.2-78.9-175.2-176c0-54.8 24.9-103.7 64.1-136c1-.9 2.1-1.7 3.2-2.6c4-3.2 8.2-6.2 12.5-9c3.1-2 6.3-4 9.6-5.8c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-3.6-.3-7.1-.5-10.7-.6c-2.7-.1-5.5-.1-8.2-.1c-3.3 0-6.5 .1-9.8 .2c-2.3 .1-4.6 .2-6.9 .4z" />
+          </svg>
+        );
+      case "sun":
+        return (
+          <svg
+            class={completeClassName}
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+          >
+            <path d="M375.7 19.7c-1.5-8-6.9-14.7-14.4-17.8s-16.1-2.2-22.8 2.4L256 61.1 173.5 4.2c-6.7-4.6-15.3-5.5-22.8-2.4s-12.9 9.8-14.4 17.8l-18.1 98.5L19.7 136.3c-8 1.5-14.7 6.9-17.8 14.4s-2.2 16.1 2.4 22.8L61.1 256 4.2 338.5c-4.6 6.7-5.5 15.3-2.4 22.8s9.8 13 17.8 14.4l98.5 18.1 18.1 98.5c1.5 8 6.9 14.7 14.4 17.8s16.1 2.2 22.8-2.4L256 450.9l82.5 56.9c6.7 4.6 15.3 5.5 22.8 2.4s12.9-9.8 14.4-17.8l18.1-98.5 98.5-18.1c8-1.5 14.7-6.9 17.8-14.4s2.2-16.1-2.4-22.8L450.9 256l56.9-82.5c4.6-6.7 5.5-15.3 2.4-22.8s-9.8-12.9-17.8-14.4l-98.5-18.1L375.7 19.7zM269.6 110l65.6-45.2 14.4 78.3c1.8 9.8 9.5 17.5 19.3 19.3l78.3 14.4L402 242.4c-5.7 8.2-5.7 19 0 27.2l45.2 65.6-78.3 14.4c-9.8 1.8-17.5 9.5-19.3 19.3l-14.4 78.3L269.6 402c-8.2-5.7-19-5.7-27.2 0l-65.6 45.2-14.4-78.3c-1.8-9.8-9.5-17.5-19.3-19.3L64.8 335.2 110 269.6c5.7-8.2 5.7-19 0-27.2L64.8 176.8l78.3-14.4c9.8-1.8 17.5-9.5 19.3-19.3l14.4-78.3L242.4 110c8.2 5.7 19 5.7 27.2 0zM256 368a112 112 0 1 0 0-224 112 112 0 1 0 0 224zM192 256a64 64 0 1 1 128 0 64 64 0 1 1 -128 0z" />
+          </svg>
+        );
       case "contract":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 576 512"
           >
@@ -92,7 +114,7 @@ const { icon } = Astro.props;
       case "note":
         return (
           <svg
-            class="text-[inherit] w-[1em] mx-2 fill-slate-600"
+            class={completeClassName}
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"
           >
