--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,8 @@
 ---
 import Icons from "./Icons.astro";
 import ThemeToggler from "./ThemeToggler.astro";
+import { Image } from "astro:assets";
+import Logo from "./public/holysheets-logo.svg";
 ---
 
 <header
@@ -9,12 +11,19 @@ import ThemeToggler from "./ThemeToggler.astro";
   <div
     class="container mx-auto p-4 font-semibold flex justify-center dark:text-white text-slate-900"
   >
-    <a class="font-semibold block mr-auto" href="/">HolySheets</a>
+    <a class="font-semibold mr-auto flex justify-center items-center" href="/">
+      <Image
+        src={Logo}
+        alt="HolySheets Logo"
+        class="w-8 h-8 mr-2 relative top-[-2px]"
+      />
+      <span>HolySheets</span>
+    </a>
     <ThemeToggler />
     <a
       href="https://github.com/holy-sheets/holysheets"
       target="_blank"
-      class="block text-xl"
+      class="flex text-xl"
     >
       <Icons icon="github" />
     </a>
