refactor: Update Sidebar component styles
The commit updates the Sidebar component styles to improve the layout and responsiveness. The changes include:
- Setting a maximum height for the Sidebar to prevent overflow
- Removing unnecessary borders and margins
- Making the Sidebar scrollable on smaller screens

These updates enhance the user experience and ensure a more visually appealing Sidebar component.

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -24,7 +24,9 @@ const { items, active } = Astro.props;
     before:content-[''] before:absolute before:bg-slate-100
     dark:before:bg-slate-900 dark:text-white dark:bg-slate-900
     before:h-full before:w-screen before:right-[100%] before:top-0
-    md:border-r-slate-200 dark:md:border-r-slate-700 md:border-r relative min-h-screen"
+    max-h-60 md:max-h-auto min-h-[initial] border md:border-0 m-3 md:m-0
+    overflow-auto md:overflow-visible
+    md:border-slate-200 dark:md:border-slate-700 md:border-r relative md:min-h-screen"
 >
   <ul class="flex flex-col w-full gap-y-2 md:top-0 min-h-auto">
     {
