--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -25,7 +25,7 @@ const { items, active } = Astro.props;
     dark:before:bg-slate-900 dark:text-white dark:bg-slate-900
     before:h-full before:w-screen before:right-[100%] before:top-0
     max-h-60 md:max-h-auto min-h-[initial] border md:border-0 m-3 md:m-0
-    overflow-auto md:overflow-visible
+    overflow-auto md:overflow-visible md:max-h-max
     md:border-slate-200 dark:md:border-slate-700 md:border-r relative md:min-h-screen"
 >
   <ul class="flex flex-col w-full gap-y-2 md:top-0 min-h-auto">
