--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import Logo from "../assets/holysheets-logo.svg";
         alt="HolySheets Logo"
         class="w-8 h-8 mr-2 relative top-[-2px]"
       />
-      <span>HolySheets</span>
+      <span>HolySheets!</span>
     </a>
     <ThemeToggler />
     <a
