--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,10 @@ import Header from "../components/Header.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content="Holysheets! Easily manipulate your Google Sheets data without confuse range codes."
+    />
     <title>
       Holysheets! Easily manipulate your Google Sheets data without confuse
       range codes.
