chore: use correct name for project

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,10 +14,10 @@ import Logo from "../assets/holysheets-logo.svg";
     <a class="font-semibold mr-auto flex justify-center items-center" href="/">
       <Image
         src={Logo}
-        alt="HolySheets Logo"
+        alt="Holysheets!Logo"
         class="w-8 h-8 mr-2 relative top-[-2px]"
       />
-      <span>HolySheets!</span>
+      <span>Holysheets!</span>
     </a>
     <ThemeToggler />
     <a
