--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,6 +6,6 @@ const currentYear = new Date().getFullYear();
   class="bg-slate-200 dark:bg-slate-800 dark:text-white py-8 border-t border-t-slate-300 dark:border-t-slate-700"
 >
   <div class="container mx-auto text-slate-400 flex px-6">
-    <p class="ml-auto">&copy; {currentYear} HolySheets</p>
+    <p class="ml-auto">&copy; {currentYear} Holysheets!/p></p>
   </div>
 </footer>
