refactor: Update GitHub Repository link in Header component
The commit updates the GitHub Repository link in the Header component by adding an `aria-label` attribute with the value "GitHub Repository". This improves the accessibility of the link by providing a descriptive label for screen readers.

Refactoring the link improves the maintainability and readability of the codebase.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,6 +24,7 @@ import Logo from "../assets/holysheets-logo.svg";
       href="https://github.com/holy-sheets/holysheets"
       target="_blank"
       class="flex text-xl"
+      aria-label="GitHub Repository"
     >
       <Icons icon="github" />
     </a>
